--- a/css/styles.css
+++ b/css/styles.css
@@ -1105,13 +1105,28 @@ textarea{
         position: relative;
     }
 
-    .nav {
+    /* .nav {
+        position: relative;
+    } */
+
+    /* .burger-off {
         position: absolute;
-    }
+        top: -56px;
+        left: 363px;
+    } */
 
-    .burger-off {
+    .menu-bg {
+        display: none;
 
-        display: flex;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background-color: tomato;
+        padding: 20px;
+        text-align: center;
+        font-size: 20px;
+
     }
 
 
@@ -1585,31 +1600,22 @@ textarea{
 
 
     /* menu-toggle */
-    /* .menu-toggle {
-        position: absolute;
-        top: 24px;
-        left: 380px;
-        display: inline-flex;
-        margin: 0;
-        padding: 0;
-        border: none;
-        background-color: transparent;
-
-    } */
     .menu-toggle {
-        min-height: 40px;
+        min-height: 70px;
         min-width: 40px;
         display: flex;
         align-items: center;
-        justify-content: center;
-
         margin: 0;
         padding: 0;
+        margin-left: 370px;
+        margin-top: -70px;
         background-color: transparent;
         cursor: pointer;
         border: none;
         border-radius: 50%;
         outline: none;
+        align-content: center;
+
     }
 
 
@@ -2432,7 +2438,7 @@ textarea{
     }
 
 
-    .menu-bg {
+    /* .menu-bg {
         position: absolute;
         top: 100%;
         left: 0;
@@ -2441,7 +2447,7 @@ textarea{
         padding: 20px;
         text-align: center;
         font-size: 20px;
-    }
+    } */
 
 
 
