--- a/css/styles.css
+++ b/css/styles.css
@@ -1100,9 +1100,9 @@ textarea{
 
 /* MEdia */
 
-@media screen and (min-width: 428px) {
+@media screen and (max-width: 767px) {
     .conteiner {
-        width: 428px;
+        width: 100%;
         padding-left: 15px;
         padding-right: 15px;
         margin: 0 auto;
@@ -1151,12 +1151,16 @@ textarea{
 
 
     .menu-container {
+        display: flex;
+        flex-direction: column;
         position: fixed;
         top: 0;
         left: 0;
         width: 100vw;
         height: 100vh;
-        padding: 32px;
+        padding-top: 80px;
+        padding-left: 40px;
+        padding-bottom: 40px;
         background-color: #fff;
         z-index: 999;
         transform: translateX(100%);
@@ -1170,6 +1174,79 @@ textarea{
 
     }
 
+    .mobile-nav-link {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        color: var(--text-color-h);
+    }
+
+    .color-link {
+        color: var(--color-ocean);
+    }
+
+    .mobile-menu-item:not(:last-child) {
+        margin-bottom: 40px;
+    }
+
+    .contact-item:not(:last-child) {
+        margin-bottom: 40px;
+    }
+
+    .contact-tel {
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 1.11;
+        color: var(--color-blue);
+    }
+
+    .contact-mail {
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: var(--text-color-p);
+    }
+
+
+
+    .mobile-wrapper {
+        margin-top: auto;
+    }
+
+    .style-icon {
+        display: flex;
+        margin-top: 48px;
+    }
+
+    .icon-group-mobile {
+        width: 40px;
+        height: 40px;
+    }
+
+    .icon-group-mobile:not(:last-child) {
+        margin-right: 40px;
+    }
+
+    .icon-hero-mobile {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        background-color: var(--color-blue);
+        border-radius: 50%;
+    }
+
+    .icon-seti {
+
+        fill: #FFFFFF;
+    }
+
+
+
+
+
 
 
 
@@ -1182,7 +1259,8 @@ textarea{
     }
 
     .hero-h {
-        width: 350px;
+        max-width: 319px;
+        width: 100%;
         margin: auto;
         margin-top: 0;
         margin-bottom: 72px;
@@ -1206,6 +1284,8 @@ textarea{
     .overlay {
         margin-left: auto;
         margin-right: auto;
+        padding-top: 112px;
+        padding-bottom: 112px;
         background-image: linear-gradient(to right,
                 rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
@@ -1213,6 +1293,7 @@ textarea{
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
+        text-align: center;
     }
 
 
@@ -1580,7 +1661,8 @@ textarea{
     }
 
     .footer-input {
-        width: 396px;
+        max-width: 396px;
+        width: 300px;
         height: 40px;
         margin-top: 16px;
         padding-left: 16px;
@@ -1636,14 +1718,16 @@ textarea{
 
     /* menu-toggle */
     .menu-toggle {
-        min-height: 70px;
+        position: absolute;
+        top: 16px;
+        right: 24px;
+        min-height: 40px;
         min-width: 40px;
         display: flex;
         align-items: center;
         margin: 0;
         padding: 0;
-        margin-left: 370px;
-        margin-top: -70px;
+
         background-color: transparent;
         cursor: pointer;
         border: none;
@@ -1651,6 +1735,22 @@ textarea{
         outline: none;
         align-content: center;
 
+    }
+
+    .menu-toggle-close {
+        position: absolute;
+        top: 40px;
+        right: 40px;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        cursor: pointer;
+        background: var(--color-footer);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
     }
 
 
@@ -1762,8 +1862,11 @@ textarea{
 
 
 
-    width: 408px;
+    max-width: 408px;
+    width: 100%;
     height: 584px;
+    max-height: 90vh;
+    overflow-y: scroll;
     background-color: var(--color-while);
 
     border-radius: 4px;
@@ -1860,7 +1963,8 @@ textarea{
 }
 
 .modal-intup {
-    width: 360px;
+    max-width: 360px;
+    width: 100%;
     height: 120px;
     padding-top: 8px;
     padding-left: 16px;
@@ -2233,6 +2337,8 @@ textarea {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        column-gap: 24px;
+        row-gap: 72px;
     }
 
 
@@ -2257,17 +2363,8 @@ textarea {
     .section-flex .item-index {
         display: flex;
         flex-wrap: wrap;
-        width: 340px;
-        margin-bottom: 72px;
+        flex-basis: calc((100% - 24px) / 2);
 
-    }
-
-    .item-index:nth-child(n + 3) {
-        margin-bottom: 0;
-    }
-
-    .item-index:nth-child(2n + 1) {
-        margin-right: 24px;
     }
 
 
@@ -2990,10 +3087,10 @@ textarea {
 
 
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
 
     .conteiner {
-        width: 1171px;
+        width: 1158px;
         padding-left: 15px;
         padding-right: 15px;
         margin: 0 auto;
@@ -3110,7 +3207,7 @@ textarea {
 
     .auth-nav {
         display: flex;
-        margin-left: 332px;
+        margin-left: auto;
         padding-top: 0;
     }
 
@@ -3165,8 +3262,8 @@ textarea {
     .hero {
         background-color: var(--text-color-h);
         text-align: center;
-        padding-top: 112px;
-        padding-bottom: 112px;
+        padding-top: 188px;
+        padding-bottom: 188px;
     }
 
     .hero-h {
@@ -3212,8 +3309,10 @@ textarea {
 
     .section-flex {
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         justify-content: center;
+
+        gap: 24px;
     }
 
 
@@ -3244,23 +3343,23 @@ textarea {
     .section-flex .item-index {
         display: flex;
         flex-wrap: wrap;
-        width: 264px;
+        flex-basis: calc((100% - 72px) / 4);
         margin-bottom: 0;
 
     }
 
-    .item-index:nth-child(n + 3) {
+    /* .item-index:nth-child(n + 3) {
         margin-bottom: 0;
     }
 
     .item-index:nth-child(2n + 1) {
         margin-right: 0;
-    }
+    } */
 
-
+    /* 
     .section-flex .item-index:not(:last-child) {
         margin-right: 24px;
-    }
+    } */
 
 
     .section-mar {
