--- a/css/styles.css
+++ b/css/styles.css
@@ -1642,6 +1642,11 @@ textarea{
 
     .form {
         display: flex;
+        flex-direction: column;
+    }
+
+    .form-footer {
+        display: flex;
         align-items: center;
         flex-direction: column;
     }
@@ -1862,7 +1867,7 @@ textarea{
 
 
 
-    max-width: 408px;
+    max-width: 392px;
     width: 100%;
     height: 584px;
     max-height: 90vh;
@@ -1886,7 +1891,9 @@ textarea{
 
 .model-button {
     position: absolute;
-    display: inline-flex;
+    top: 24px;
+    right: 24px;
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 24px;
@@ -1906,9 +1913,6 @@ textarea{
 }
 
 .modal-x {
-    position: absolute;
-    display: flex;
-    transform: translate(100%, 100%);
     fill: #000;
 }
 
@@ -2105,6 +2109,10 @@ textarea {
 
 @media screen and (min-width: 768px) {
     .section-mar {
+        display: none;
+    }
+
+    .menu-container {
         display: none;
     }
 
@@ -2879,7 +2887,7 @@ textarea {
 
     .model-button {
         position: absolute;
-        display: inline-flex;
+        display: flex;
         justify-content: center;
         align-items: center;
         width: 24px;
@@ -2899,9 +2907,6 @@ textarea {
     }
 
     .modal-x {
-        position: absolute;
-        display: flex;
-        transform: translate(100%, 100%);
         fill: #000;
     }
 
@@ -3886,7 +3891,7 @@ textarea {
 
     .model-button {
         position: absolute;
-        display: inline-flex;
+        display: flex;
         justify-content: center;
         align-items: center;
         width: 24px;
@@ -3906,9 +3911,6 @@ textarea {
     }
 
     .modal-x {
-        position: absolute;
-        display: flex;
-        transform: translate(100%, 100%);
         fill: #000;
     }
 
