--- a/css/styles.css
+++ b/css/styles.css
@@ -1863,7 +1863,7 @@ textarea{
     position: absolute;
     top: 50%;
     left: 50%;
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
 
 
 
@@ -2862,7 +2862,7 @@ textarea {
         position: absolute;
         top: 50%;
         left: 50%;
-        padding: 24px;
+        padding: 72px 24px 24px 24px;
 
 
 
@@ -3453,6 +3453,9 @@ textarea {
         margin-left: 0;
     }
 
+    .section-centr {
+        display: flex;
+    }
 
 
 
@@ -3866,7 +3869,7 @@ textarea {
         position: absolute;
         top: 50%;
         left: 50%;
-        padding: 24px;
+        padding: 72px 24px 24px 24px;
 
 
 
@@ -3875,7 +3878,7 @@ textarea {
         background-color: var(--color-while);
 
         border-radius: 4px;
-
+        overflow-y: unset;
         transform: translate(-50%, -50%) scale(1);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
