--- a/css/styles.css
+++ b/css/styles.css
@@ -2427,27 +2427,37 @@ textarea {
         margin-top: 8px;
     }
 
+
+    .section-centr {
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 56px;
+        column-gap: 24px;
+        justify-content: center;
+    }
+
     .section-centr .item {
         background-color: var(--color-while);
     }
 
-    .section-centr .item:not(:last-child) {
+    /* .section-centr .item:not(:last-child) {
         margin-bottom: 64px;
-    }
+    } */
 
     .section .section-centr .item {
         display: inline-block;
-        width: 264px;
-        margin-right: 24px;
+        /* width: 264px;
+        margin-right: 24px; */
     }
 
     .section .section-centr .item:nth-child(2n) {
         margin-right: 0;
     }
 
+    /* 
     .section .section-centr .item:nth-child(2n + 1) {
         margin-left: 108px;
-    }
+    } */
 
 
 
@@ -2985,7 +2995,8 @@ textarea {
         text-align: center;
         letter-spacing: 0.02em;
 
-        margin-top: 24px;
+        margin-top: 0;
+        margin-bottom: 16px;
     }
 
     .form-text-check {
@@ -3222,8 +3233,8 @@ textarea {
 
 
         color: var(--text-color-p);
-        font-size: 12px;
-        line-height: 1.3;
+        font-size: 16px;
+        line-height: 1.5;
         letter-spacing: 0.04em;
 
 
@@ -3929,6 +3940,12 @@ textarea {
         margin-left: auto;
         margin-right: auto;
 
+    }
+
+    .form-footer {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
     }
 
     .form-field {
