--- a/css/styles.css
+++ b/css/styles.css
@@ -1867,10 +1867,10 @@ textarea{
 
 
 
-    max-width: 392px;
+    max-width: 408px;
     width: 100%;
     height: 584px;
-    max-height: 90vh;
+    max-height: 100vh;
     overflow-y: scroll;
     background-color: var(--color-while);
 
@@ -3457,7 +3457,7 @@ textarea {
     }
 
     .section .section-centr .item:not(:last-child) {
-        margin-right: 24px;
+        margin-right: 0;
     }
 
     .section .section-centr .item:nth-child(2n + 1) {
@@ -3886,6 +3886,7 @@ textarea {
 
         width: 408px;
         height: 584px;
+        max-height: 160vh;
         background-color: var(--color-while);
 
         border-radius: 4px;
@@ -3945,7 +3946,6 @@ textarea {
     .form-footer {
         display: flex;
         align-items: center;
-        flex-direction: column;
     }
 
     .form-field {
@@ -4009,7 +4009,7 @@ textarea {
         text-align: center;
         letter-spacing: 0.02em;
 
-        margin-top: 24px;
+        margin-top: 0;
     }
 
     .form-text-check {
